Blackfire Player Changelog
==========================

* 0.12.0 (2018-09-12)

 * Deprecate --full-report in favor of --json option for "run" command
 * Use an erroneous exit code when "validate" command fails
 * Remove the deprecated --validate option for "run" command in favor of the "validate" command

* 0.11.0 (2018-08-08)

 * Use URL as default step name
 * Remove quotes around step and build names

* 0.10.0 (2018-07-30)

 * Standardize ``run --full-report`` output command (BC break)
 * Fix variable management

* 0.9.0 (2018-07-16)

 * Add Blackfire PHP SDK User-Agent header suffix with Player version
 * Allow to set a build name
 * Change "warmup" default value from "false" to "true"

* 0.8.2 (2018-07-09)

 * Fix JSON error handling when reading stdin as input

* 0.8.1 (2018-07-06)

 * Improve error handling
 * Add more info to error output
 * Reword error messages
 * Update documentation
 * Update dependencies

* 0.8.0 (2018-06-25)

 * Add a validate command
 * Remove deprecated --json option
 * Deprecate run --validate option
 * Forward Blackfire player expectation failures to Blackfire API

* 0.7.0 (2018-06-14)

 * restrict loading to files with the 'bkf' extension
 * rework build references to have one reference per scenario
 * enable Blackfire by default when the '--blackfire-env' CLI option is used
 * fix usage of variables

* 0.6.0 (2018-04-17)

 * send Guzzle timers to Blackfire
 * improve exception messages
 * fix variables resolving
 * fix CLI parameters escaping

* 0.5.0-alpha-5 (2017-11-07)

 * add a 'warmup' step option
 * add a new CLI option '--full-report' and deprecate '--json'
 * add a cookie to profiled requests to help cross HTTP caches
 * add an extension to avoid infinite loops

* 0.5.0-alpha-1 (2017-01-05)

 * Second major release. It breaks backwards compatibility. For now on, the
   player is only distributed as a .phar file and cannot be embedded in a PHP
   project anymore.

* 0.4.6 (2016-12-05)

 * fix usage of parent build
